@startuml ClassDiagram

title "Class Diagram of the AI-Driven Eight Puzzle Solver"

skinparam class {
    BackgroundColor PaleGreen
    ArrowColor SeaGreen
    BorderColor SpringGreen
}

class GameController {
  -user_input: String
  -digit_list: List
  -result: Result
  -start_time: Time
  +run(): Void
  +solve_puzzle(): Void
  +print_instructions(): Void
  +process_input(user_input): List
  +print_solution(solution, elapsed_time, format_in_minutes): Void
}

class EightPuzzleProblem {
  -GOAL: String
  -goal_positions: Dictionary
  +actions(state): List
  +result(state, action): String
  +is_goal(state): Boolean
  +cost(state1, action, state2): Int
  +heuristic(state): Int
}

class PuzzleRepresentation {
  +list_to_string(list_): String
  +string_to_list(string_): List
  +find_location(rows, element_to_find): Tuple
}

class PuzzleSolver {
  +getInvCount(tiles): Int
  +isSolvable(puzzle): Boolean
}

GameController --> EightPuzzleProblem: uses
GameController --> PuzzleSolver: uses
EightPuzzleProblem --> PuzzleRepresentation: uses

@enduml
